# libunicorn

./: .gitignore  COPYING  Makefile  NEWS  README.md  build.mk  configure.ac  configure.mk.in  extra.mk.in  libchat.pc.in  libunicorn.pc.in
src/: Makefile  casemap.c  chat.h  client.c  dict.c  hook.c  isupport.c  list.c  log.c  message.c  mode.c  nick.c  sender.c  unicorn.h
